# roast

./: README.md  pyproject.toml
src/roast/: bench_all.py  coordinator.py  model.py  participant.py  roast.py  shamir.py
