[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roast"
version = "0.1"
authors = [
  { name="Elliott Jin", email="elliott.jin@gmail.com" },
  { name="Nicolas van Kempen", email="nvankemp@gmail.com" },
]

dependencies = [
  "fastecdsa~=2.2",
]
description = "Naive implementation of ROAST protocol for robust threshold signatures."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robot-dreams/roast"
"Bug Tracker" = "https://github.com/robot-dreams/roast/issues"
